--- a/dashboard_day.html
+++ b/dashboard_day.html
@@ -160,5 +160,25 @@
 <H3>&#128010; <a href=index_76.76.2.39_1hosts.html>76.76.2.39</a> Daily Response Times & Loss Stats(5min average)</H3>
 <a href=images/dnsping_76.76.2.39_day.png><img src=images/dnsping_76.76.2.39_day.png style="max-height: 90%; max-width: 90%" alt="generated image from data"></a><br>
 <br>
+<H2>&#128010; <a href=index_185.236.104.104_1hosts.html>185.236.104.104</a> DNS Ping (FlashStart Malware- und Inhaltsfilter-Testversion)</H2>
+<H3>&#128010; <a href=index_185.236.104.104_1hosts.html>185.236.104.104</a> Daily Response Times & Loss Stats(5min average)</H3>
+<a href=images/dnsping_185.236.104.104_day.png><img src=images/dnsping_185.236.104.104_day.png style="max-height: 90%; max-width: 90%" alt="generated image from data"></a><br>
+<br>
+<H2>&#128010; <a href=index_185.236.105.105_1hosts.html>185.236.105.105</a> DNS Ping (FlashStart Malware- und Inhaltsfilter-Testversion)</H2>
+<H3>&#128010; <a href=index_185.236.105.105_1hosts.html>185.236.105.105</a> Daily Response Times & Loss Stats(5min average)</H3>
+<a href=images/dnsping_185.236.105.105_day.png><img src=images/dnsping_185.236.105.105_day.png style="max-height: 90%; max-width: 90%" alt="generated image from data"></a><br>
+<br>
+<H2>&#128010; <a href=index_86.54.11.11_1hosts.html>86.54.11.11</a> DNS Ping (dns4.eu Protective Resolution)</H2>
+<H3>&#128010; <a href=index_86.54.11.11_1hosts.html>86.54.11.11</a> Daily Response Times & Loss Stats(5min average)</H3>
+<a href=images/dnsping_86.54.11.11_day.png><img src=images/dnsping_86.54.11.11_day.png style="max-height: 90%; max-width: 90%" alt="generated image from data"></a><br>
+<br>
+<H2>&#128010; <a href=index_86.54.11.13_1hosts.html>86.54.11.13</a> DNS Ping (dns4.eu Protective + Ad blocking)</H2>
+<H3>&#128010; <a href=index_86.54.11.13_1hosts.html>86.54.11.13</a> Daily Response Times & Loss Stats(5min average)</H3>
+<a href=images/dnsping_86.54.11.13_day.png><img src=images/dnsping_86.54.11.13_day.png style="max-height: 90%; max-width: 90%" alt="generated image from data"></a><br>
+<br>
+<H2>&#128010; <a href=index_86.54.11.100.html>86.54.11.100</a> DNS Ping (dns4.eu Protective + Ad blocking)</H2>
+<H3>&#128010; <a href=index_86.54.11.00_1hosts.html>86.54.11.100</a> Daily Response Times & Loss Stats(5min average)</H3>
+<a href=images/dnsping_86.54.11.100_day.png><img src=images/dnsping_86.54.11.100_day.png style="max-height: 90%; max-width: 90%" alt="generated image from data"></a><br>
+<br>
 </BODY>
 </HTML>
