--- a/dashboard_week.html
+++ b/dashboard_week.html
@@ -168,15 +168,15 @@
 <H3>&#128010; <a href=index_185.236.105.105_1hosts.html>185.236.105.105</a> Daily Response Times & Loss Stats(5min average)</H3>
 <a href=images/dnsping_185.236.105.105_week.png><img src=images/dnsping_185.236.105.105_week.png style="max-height: 90%; max-width: 90%" alt="generated image from data"></a><br>
 <br>
-<H2>&#128010; <a href=index_86.54.11.1.html>86.54.11.1</a> DNS Ping (dns4.eu Protective Resolution)</H2>
+<H2>&#128010; <a href=index_86.54.11.1.html>86.54.11.1</a> DNS Ping (joindns.eu4 Protective Resolution)</H2>
 <H3>&#128010; <a href=index_86.54.11.1.html>86.54.11.1</a> Daily Response Times & Loss Stats(5min average)</H3>
 <a href=images/dnsping_86.54.11.1_week.png><img src=images/dnsping_86.54.11.1_week.png style="max-height: 90%; max-width: 90%" alt="generated image from data"></a><br>
 <br>
-<H2>&#128010; <a href=index_86.54.11.13.html>86.54.11.13</a> DNS Ping (dns4.eu Protective + Ad blocking)</H2>
+<H2>&#128010; <a href=index_86.54.11.13.html>86.54.11.13</a> DNS Ping (joindns.eu4 Protective + Ad blocking)</H2>
 <H3>&#128010; <a href=index_86.54.11.13.html>86.54.11.13</a> Daily Response Times & Loss Stats(5min average)</H3>
 <a href=images/dnsping_86.54.11.13_week.png><img src=images/dnsping_86.54.11.13_week.png style="max-height: 90%; max-width: 90%" alt="generated image from data"></a><br>
 <br>
-<H2>&#128010; <a href=index_86.54.11.100.html>86.54.11.100</a> DNS Ping (dns4.eu Protective + Ad blocking)</H2>
+<H2>&#128010; <a href=index_86.54.11.100.html>86.54.11.100</a> DNS Ping (joindns.eu4 Protective + Ad blocking)</H2>
 <H3>&#128010; <a href=index_86.54.11.100.html>86.54.11.100</a> Daily Response Times & Loss Stats(5min average)</H3>
 <a href=images/dnsping_86.54.11.100_week.png><img src=images/dnsping_86.54.11.100_week.png style="max-height: 90%; max-width: 90%" alt="generated image from data"></a><br>
 <br>
