--- a/dashboard_hour.html
+++ b/dashboard_hour.html
@@ -164,5 +164,17 @@
 <H3>&#128010; <a href=index_86.54.11.100.html>86.54.11.100</a> Daily Response Times & Loss Stats(5min average)</H3>
 <a href=images/dnsping_86.54.11.100_hour.png><img src=images/dnsping_86.54.11.100_hour.png style="max-height: 90%; max-width: 90%" alt="generated image from data"></a><br>
 <br>
+<H2>&#128010; <a href=index_135.181.207.105.html>135.181.207.105</a> DNS Ping (https://dns01.eddns.eu/)</H2>
+<H3>&#128010; <a href=index_135.181.207.105.html>135.181.207.105</a> Daily Response Times & Loss Stats(5min average)</H3>
+<a href=images/dnsping_135.181.207.105_hour.png><img src=images/dnsping_135.181.207.105_hour.png style="max-height: 90%; max-width: 90%" alt="generated image from data"></a><br>
+<br>
+<H2>&#128010; <a href=index_89.58.62.53.html>89.58.62.53</a> DNS Ping (https://dns01.eddns.eu/)</H2>
+<H3>&#128010; <a href=index_89.58.62.53.html>89.58.62.53</a> Daily Response Times & Loss Stats(5min average)</H3>
+<a href=images/dnsping_89.58.62.53_hour.png><img src=images/dnsping_89.58.62.53_hour.png style="max-height: 90%; max-width: 90%" alt="generated image from data"></a><br>
+<br>
+<H2>&#128010; <a href=index_138.199.237.109.html>138.199.237.109</a> DNS Ping (https://dns01.eddns.eu/)</H2>
+<H3>&#128010; <a href=index_138.199.237.109.html>138.199.237.109</a> Daily Response Times & Loss Stats(5min average)</H3>
+<a href=images/dnsping_138.199.237.109_hour.png><img src=images/dnsping_138.199.237.109_hour.png style="max-height: 90%; max-width: 90%" alt="generated image from data"></a><br>
+<br>
 </BODY>
 </HTML>
